--- a/views/submit.html
+++ b/views/submit.html
@@ -2,6 +2,7 @@
     <head>
     <title></title>
     </head>
+    <h1>Submit</h1>
     <body>
         <form action="/submit" method="post">
             Username:<input type="text" name="body">
