--- a/views/edit.html
+++ b/views/edit.html
@@ -1,6 +1,12 @@
-<h1>Editing {{.Title}}</h1>
-
-<form action="/save/{{.Title}}" method="POST">
-  <div><textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
-  <div><input type="submit" value="Save"></div>
-</form>
+<html>
+    <head>
+    <title></title>
+    </head>
+    <h1>Edit</h1>
+    <body>
+        <form action="/edit" method="post">
+            Username:<input type="text" name="body">
+            <input type="submit" value="Submit">
+        </form>
+    </body>
+</html>
