--- a/views/edit.html
+++ b/views/edit.html
@@ -4,7 +4,7 @@
     </head>
     <h1>Edit</h1>
     <body>
-        <form action="/edit" method="post">
+        <form action="/edit/{{.}}" method="post">
             Username:<input type="text" name="body">
             <input type="submit" value="Submit">
         </form>
