--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <div>
       <strong>{{ .AuthorID }} wrote:</strong>
     </div>
-    <div class="body-div"><a href="/edit/{{.ID}}">{{ .Body }}</a></div>
+    <div class="body-div"><a href="/edit/{{.ID}}">{{ .Body }}</a><form action="/delete/{{.ID}}" method="POST"><button type="submit">Delete</button></form></div>
   </div>
   
   {{ end }}
