--- a/views/index.html
+++ b/views/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-  <title>Go To-Do list</title>
+  <title>Go Potgres Todos</title>
 </head>
+<h1>Welcome</h1>
 
 <body>
   <h1>Goland todos!</h1>
-  <a href="/submit">Submit</a>
-  <a href="/login">login</a>
-  <a href="/register">register</a>
+  <a href="/login">Login</a>
+  <a href="/register">Register</a>
 </body>
 
 </html>
