--- a/assets/mainFloats.css
+++ b/assets/mainFloats.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+p#unauthed {
+  color: red;
+}
+
 html {
   height: 100vh;
 }
@@ -48,9 +52,16 @@ button {
   float: left;
   background-color: #f1f1f1;
   padding: 10px;
-  min-height: 100%;
+  height: 100%;
   border-radius: 10px;
 }
+
+/* .no-auth-div {
+  background-color: #f1f1f1;
+  padding: 10px;
+  height: 100%;
+  border-radius: 10px;
+} */
 
 .side {
   width: 28.5%;
@@ -62,10 +73,24 @@ button {
   margin-left: 1.5%;
 }
 
+/* div#single {
+  background-color: #f1f1f1 !important;
+  float: right !important;
+  display: block;
+  margin: auto;
+  width: 50%;
+  color: red;
+}
+
+div#single p {
+  color: red;
+} */
+
 .row {
   padding: 1.5%;
   background: lightgrey;
   min-height: 60%;
+  width: 100%;
 }
 
 .row:after {
