general purpose cache buster completed. TODO: finish up templates

--- a/views/index2.html
+++ b/views/index2.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-{{ template "head"}}
+{{ template "head" .}}
 
 <body>
+  <div>styles:{{.Styles}}</div>
 
   {{ template "header" .}} {{ template "nav " .}}
 
