--- a/views/head.html
+++ b/views/head.html
@@ -4,6 +4,6 @@
   <title>Go Potgres Todos</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="/static/mainFloats.css">
+  <link rel="stylesheet" type="text/css" href="/static/{{.Styles}}">
 </head>
 {{ end }}
