--- a/views/nav.html
+++ b/views/nav.html
@@ -2,5 +2,9 @@
 <div class="nav">
   <a href="/submit">Submit</a>
   <a href="/logout">Logout</a>
+  <a href="/login">Login</a>
+  <a href="/register">Register</a>
+  <a id="home-button" href="/">Home</a>
+
 </div>
 {{ end }}
