error handling jenky af but getting there. TODO: 'https://blog.golang.org/error-handling-and-go'

--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,7 @@
 <div class="column single">
   <div class="container">
     <section>
-      
+
       <form action="/login" method="post">
 
         <div>email:
@@ -17,9 +17,12 @@
         <input type="submit" value="Submit">
 
       </form>
-      
+
     </section>
   </div>
 </div>
 
-{{ end }}
+{{ end }}func InternalServerError(w http.ResponseWriter) {
+	w.WriteHeader(http.StatusInternalServerError)
+	w.Write([]byte("Internal server error"))
+}
